--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,10 @@ jobs:
           path: test-reports
           destination: test-reports
 
+      - store_test_results:
+          path: test-reports
+
+
 workflows:
   version: 2
 
