config change to test all branches

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,4 @@ workflows:
 
   build_test_deploy:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: first-unit-test
+      - build
