Cleans up .gitignore after split

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,8 @@
 .DS_Store
+.mypy_cache
 build/
-code/infra/build
 docs/build
 docs/doctrees
-**.terraform/
-**.terraform.*/
-**tfplan
-**/terraform.tfvars
-**/terraform.d/
-*.encrypted_password
-*.p8
-*.pub
 *.pyc
-**.venv
-**/.mypy_cache
-**/*.envs
+*.envs
+*.venv
