Changed checkbox to switch and made a few minor aesthetic changes

--- a/src/samui/frontend/public/manifest.json
+++ b/src/samui/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Michelin",
-  "name": "Michelin",
+  "short_name": "SnowAlert",
+  "name": "SnowAlert",
   "icons": [
     {
       "src": "favicon.ico",
