--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -15,7 +15,7 @@ port-for==0.4
 Pygments==2.2.0
 pyparsing==2.2.2
 pytz==2018.7
-PyYAML==3.13
+PyYAML==4.2b1
 requests==2.20.0
 six==1.11.0
 snowballstemmer==1.2.1
