--- a/Dockerfile.samui
+++ b/Dockerfile.samui
@@ -15,7 +15,6 @@ RUN apt-get update \
  && apt-get install -y gcc linux-libc-dev \
  && rm -rf /var/lib/apt/lists/* \
  && PYTHONPATH='' pip install ./snowalert/src/ ./snowalert/src/samui/backend/ \
- && cp -r ./snowalert/src/samui/frontend  /var/task/snowalert/venv/lib/python3.7/frontend \
  && apt-get purge -y --auto-remove gcc linux-libc-dev
 
 # frontend
@@ -32,6 +31,6 @@ RUN apt-get update \
  && apt-get purge -y --auto-remove curl gnupg2 apt-transport-https nodejs yarn
 
 # link frontend build into backend venv
-RUN ln -s ./snowalert/src/samui/frontend ./snowalert/venv/lib/python3.7/frontend
+RUN ln -s $PWD/snowalert/src/samui/frontend ./snowalert/venv/lib/python3.7/
 
 CMD python ./snowalert/src/samui/backend/samui/app.py
