--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -1,3 +1,32 @@
 [mypy]
 python_version=3.7
-follow_imports=silent
+
+[mypy-boto3.*]
+ignore_missing_imports = True
+
+[mypy-fire.*]
+ignore_missing_imports = True
+
+[mypy-cryptography.*]
+ignore_missing_imports = True
+
+[mypy-snowflake.*]
+ignore_missing_imports = True
+
+[mypy-flask_bcrypt.*]
+ignore_missing_imports = True
+
+[mypy-flask_sqlalchemy.*]
+ignore_missing_imports = True
+
+[mypy-flask_migrate.*]
+ignore_missing_imports = True
+
+[mypy-flask_script.*]
+ignore_missing_imports = True
+
+[mypy-jira.*]
+ignore_missing_imports = True
+
+[mypy-logbook.*]
+ignore_missing_imports = True
