--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -4,6 +4,9 @@ python_version=3.7
 [mypy-boto3.*]
 ignore_missing_imports = True
 
+[mypy-pytest.*]
+ignore_missing_imports = True
+
 [mypy-cryptography.*]
 ignore_missing_imports = True
 
