--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -12,7 +12,7 @@ COPY ./src ./snowalert/src
 COPY ./run ./run
 COPY ./install ./install
 RUN PYTHONPATH='' pip install ./snowalert/src/
-RUN PYTHONPATH='' pip install alooma-pysdk requests pytest pytest-ordering
+RUN PYTHONPATH='' pip install alooma-pysdk requests 
 
 
 CMD ./run all
