addresses most of andrey's comments

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,4 @@
 FROM python:3.7-slim-stretch
 
-RUN pip install --upgrade pip virtualenv pyflakes
+RUN pip install --upgrade pip virtualenv pyflakes pytest pytest-ordering mypy mypy-extensions
 RUN apt update -y && apt install -y git
