--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -2,7 +2,7 @@ FROM python:3.7-slim-stretch
 
 WORKDIR /var/task
 
-RUN pip install --upgrade pip virtualenv pyflakes
+RUN pip install --upgrade pip virtualenv
 
 RUN mkdir -p ./snowalert
 RUN virtualenv ./snowalert/venv
@@ -12,7 +12,7 @@ COPY ./src ./snowalert/src
 COPY ./run ./run
 COPY ./install ./install
 RUN PYTHONPATH='' pip install ./snowalert/src/
-RUN PYTHONPATH='' pip install alooma-pysdk requests 
+RUN PYTHONPATH='' pip install alooma-pysdk requests
 
 
 CMD ./run all
