--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -4,6 +4,15 @@ python_version=3.7
 [mypy-boto3.*]
 ignore_missing_imports = True
 
+[mypy-rpy2.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
+ignore_missing_imports = True
+
 [mypy-fire.*]
 ignore_missing_imports = True
 
