Fixes regression test SP1099 and refactors tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
             pyflakes ./scripts ./runners ./samui/backend/samui
             MYPYPATH="`pwd`/samui/backend/" \
               mypy --config-file mypy.ini ./runners ./scripts ./samui/backend/samui
-            pytest ./runners -vv
+            pytest -vv
 
       # - run:
       #     name: do the build
