--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
             pip install . && touch .venv/lib/python3.7/site-packages/snowflake/__init__.py
             pip install rpy2 pandas
             pip install mypy
+            pip install slackclient
 
       - save_cache:
           paths:
