adds slackclient to mypy.ini

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -39,3 +39,6 @@ ignore_missing_imports = True
 
 [mypy-logbook.*]
 ignore_missing_imports = True
+
+[mypy-slackclient.*]
+ignore_missing_imports = True
