parent 56836993ae1842eb481080dd83682e04e14981fb author Greg Butzi <gregory.butzi@snowflake.com> 1560376861 -0700 committer Greg Butzi <gregory.butzi@snowflake.com> 1560807960 -0700
parent 56836993ae1842eb481080dd83682e04e14981fb
author Greg Butzi <gregory.butzi@snowflake.com> 1560376861 -0700
committer Greg Butzi <gregory.butzi@snowflake.com> 1560807946 -0700

azure_ad_audit connector

azure_ad_signin connector

azure_operation.py works

Connection options are up to date

test function for azure connectors implemented

test() is punted to v2 of connectors

updating init.py

adds azure_log connector, which condenses the three azure connectors into one

Connection options are up to date

test() is punted to v2 of connectors

updating init.py

adds azure_log connector, which condenses the three azure connectors into one

azure log connector

azure_log imported correctly

All three azure connectors work in parallel

mypy fix

removing old connectors from git

addressing comments

addressing third comment

.

addressing third comment

.

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -42,3 +42,6 @@ ignore_missing_imports = True
 
 [mypy-slackclient.*]
 ignore_missing_imports = True
+
+[mypy-azure.*]
+ignore_missing_imports = True
