--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -4,6 +4,9 @@ python_version=3.7
 [mypy-boto3.*]
 ignore_missing_imports = True
 
+[mypy-botocore.*]
+ignore_missing_imports = True
+
 [mypy-rpy2.*]
 ignore_missing_imports = True
 
@@ -41,4 +44,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-slackclient.*]
+ignore_missing_imports = True
+
+[mypy-azure.*]
 ignore_missing_imports = True
