Minor fixes and cleanup

--- a/infra/k8s/manifests/sa-runner-cronjob.yaml
+++ b/infra/k8s/manifests/sa-runner-cronjob.yaml
@@ -13,7 +13,7 @@ spec:
       template:
         spec:
           containers:
-          - image: snowsec/snowalert:1.7.2-rc
+          - image: snowsec/snowalert:latest
             name: snowalert
             resources:
               limits:
