--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -18,5 +18,4 @@ COPY ./install ./install
 RUN PYTHONPATH='' pip install ./snowalert/src/
 RUN PYTHONPATH='' pip install alooma-pysdk requests
 
-CMD ./run allpush
-
+CMD ./run all
