--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -48,3 +48,6 @@ ignore_missing_imports = True
 
 [mypy-azure.*]
 ignore_missing_imports = True
+
+[mypy-pytenable.*]
+ignore_missing_imports = True
