--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -49,5 +49,5 @@ ignore_missing_imports = True
 [mypy-azure.*]
 ignore_missing_imports = True
 
-[mypy-pytenable.*]
+[mypy-tenable.*]
 ignore_missing_imports = True
