[DC] Adds G Suite Logs Connector

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -51,3 +51,9 @@ ignore_missing_imports = True
 
 [mypy-tenable.*]
 ignore_missing_imports = True
+
+[mypy-google.oauth2.*]
+ignore_missing_imports = True
+
+[mypy-googleapiclient.*]
+ignore_missing_imports = True
