--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -57,3 +57,9 @@ ignore_missing_imports = True
 
 [mypy-googleapiclient.*]
 ignore_missing_imports = True
+
+[mypy-twilio.*]
+ignore_missing_imports = True
+
+[mypy-flask.*]
+ignore_missing_imports = True
