--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -64,5 +64,5 @@ ignore_missing_imports = True
 [mypy-flask.*]
 ignore_missing_imports = True
 
-[pybrake.*]
+[mypy-pybrake.*]
 ignore_missing_imports = True
