[DC] Adds connectors dir to mypy check

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             source .venv/bin/activate
             pyflakes ./scripts ./runners ./webui/backend/webui
             MYPYPATH="`pwd`/webui/backend/" \
-              mypy --config-file mypy.ini ./runners ./scripts ./webui/backend/webui
+              mypy --config-file mypy.ini ./runners ./scripts ./webui/backend/webui ./connectors
             pytest -vv
 
       # - run:
