[build] Fixes CircleCI
The new version of rpy requires R to be installed at install time, not run time.  This change adds R to the builder in order to allow dependency installation to complete in CircleCI.

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -1,4 +1,6 @@
 FROM python:3.7-slim-stretch
 
+RUN apt-get update -y \
+ && apt-get install -y git build-essential r-base
+
 RUN pip install --upgrade pip virtualenv pyflakes pytest pytest-ordering mypy mypy-extensions
-RUN apt update -y && apt install -y git build-essential
