--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -66,3 +66,6 @@ ignore_missing_imports = True
 
 [mypy-pybrake.*]
 ignore_missing_imports = True
+
+[mypy-aiohttp.*]
+ignore_missing_imports = True
