--- a/Dockerfile.webui
+++ b/Dockerfile.webui
@@ -12,7 +12,7 @@ COPY ./src ./snowalert/src
 
 # backend
 RUN apt-get update \
- && apt-get install -y gcc linux-libc-dev \
+ && apt-get install -y gcc linux-libc-dev r-base \
  && rm -rf /var/lib/apt/lists/* \
  && PYTHONPATH='' pip install ./snowalert/src/ ./snowalert/src/webui/backend/ \
  && apt-get purge -y --auto-remove gcc linux-libc-dev
