--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -69,3 +69,6 @@ ignore_missing_imports = True
 
 [mypy-aiohttp.*]
 ignore_missing_imports = True
+
+[mypy-aioboto3.*]
+ignore_missing_imports = True
