Add web listener dependancy on target group

--- a/infra/cfn/snowalert.yaml
+++ b/infra/cfn/snowalert.yaml
@@ -425,6 +425,7 @@ Resources:
   WebUiListenerHTTPS:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Condition: ShouldCreateWebUi
+    DependsOn : WebUiTargetGroupHTTPS
     Properties:
       Certificates:
         - CertificateArn: !Ref 'CertificateArn'
