--- a/infra/cfn/snowalert.yaml
+++ b/infra/cfn/snowalert.yaml
@@ -310,7 +310,7 @@ Resources:
   Service:
     Type: AWS::ECS::Service
     Condition: ShouldCreateWebUi
-    DependsOn : WebUiAlb
+    DependsOn : WebUiListenerHTTPS
     Properties:
       ServiceName: !Join ["-",[!Ref 'ResourcesPrefix', !Ref 'Slice', 'WebUiECSService'] ]
       Cluster: !Ref 'WebUiECSCluster'
@@ -362,18 +362,6 @@ Resources:
             - Name: SA_KMS_KEY
               Value: !GetAtt SnowAlertKmsKey.Arn
           Secrets:
-            - Name: PRIVATE_KEY
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','PRIVATE_KEY']]]]
-            - Name: PRIVATE_KEY_PASSWORD
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','PRIVATE_KEY_PASSWORD']]]]
-            - Name: SA_USER
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','SA_USER']]]]
-            - Name: SA_WAREHOUSE
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','SA_WAREHOUSE']]]]
-            - Name: SA_DATABASE
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','SA_DATABASE']]]]
-            - Name: SA_ROLE
-              ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','SA_ROLE']]]]
             - Name: SLACK_API_TOKEN
               ValueFrom: !Join [':', ['arn:aws:ssm', !Ref 'AWS::Region', !Ref 'AWS::AccountId',!Join ['/', [ 'parameter', !Ref ResourcesPrefix, !Ref 'Slice','SLACK_API_TOKEN']]]]
             - Name: SNOWFLAKE_ACCOUNT
