--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -72,3 +72,6 @@ ignore_missing_imports = True
 
 [mypy-aioboto3.*]
 ignore_missing_imports = True
+
+[mypy-xmltodict.*]
+ignore_missing_imports = True
