[dc] Cleans up Salesforce mypy, formatting, imports

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -75,3 +75,6 @@ ignore_missing_imports = True
 
 [mypy-xmltodict.*]
 ignore_missing_imports = True
+
+[mypy-simple_salesforce.*]
+ignore_missing_imports = True
