--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.10.2",
-    "antd": "^3.11.6",
+    "antd": "^3.26.6",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "enquire.js": "^2.1.6",
@@ -16,9 +16,9 @@
     "moment": "^2.23.0",
     "path-to-regexp": "^3.1.0",
     "rc-drawer": "^2.0.9",
-    "react": "^16.6.3",
+    "react": "^16.12.0",
     "react-document-title": "^2.0.3",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.12.0",
     "react-fittext": "^1.0.0",
     "react-redux": "^5.0.7",
     "react-router-redux": "^5.0.0-alpha.9",
@@ -53,19 +53,19 @@
     "@types/history": "^4.6.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.7.11",
+    "@types/node": "^13.1.4",
     "@types/react-document-title": "^2.0.2",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-redux": "^5.0.17",
-    "@types/stylus": "^0.48.29",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "husky": "^3.0.8",
-    "lint-staged": "^9.4.1",
+    "@types/stylus": "^0.48.32",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.13.7",
-    "react-app-rewire-less": "^2.1.2",
-    "react-app-rewired": "^1.5.2",
+    "prettier": "^1.19.1",
+    "react-app-rewire-less": "^2.1.3",
+    "react-app-rewired": "1.6.2",
     "react-scripts-ts": "^3.1.0",
     "redux-devtools-extension": "^2.13.7",
     "source-map-explorer": "^2.2.1",
