--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.10.2",
+    "@types/react-router": "^5.1.3",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "connected-react-router": "^6.6.1",
     "enquire.js": "^2.1.6",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
@@ -15,13 +17,13 @@
     "lodash-decorators": "^6.0.0",
     "moment": "^2.23.0",
     "path-to-regexp": "^6.1.0",
-    "rc-drawer": "^2.0.9",
+    "rc-drawer": "^3.1.1",
     "react": "^16.12.0",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.12.0",
     "react-fittext": "^1.0.0",
-    "react-redux": "^5.0.7",
-    "react-router-redux": "^5.0.0-alpha.9",
+    "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "url-pattern": "^1.0.3"
@@ -57,7 +59,6 @@
     "@types/react-document-title": "^2.0.2",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
-    "@types/react-router-redux": "^5.0.17",
     "@types/stylus": "^0.48.32",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "husky": "^3.1.0",
