--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.10.2",
+    "@types/jest": "^24.0.25",
+    "@types/react": "^16.9.17",
     "@types/react-router": "^5.1.3",
     "antd": "^3.26.6",
     "axios": "^0.19.0",
@@ -26,16 +28,17 @@
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "url-pattern": "^1.0.3"
   },
   "scripts": {
-    "build-ts": "tsc -p tsconfig.build.json",
+    "build-ts": "react-scripts build",
     "build-css": "stylus-chokidar src/",
     "prepare": "npm run build-ts && npm run build-css",
     "watch-css": "npm run build-css && stylus-chokidar -w src/ --include-css",
-    "start-ts": "react-app-rewired start --scripts-version react-scripts-ts",
+    "start-ts": "react-app-rewired start --scripts-version react-scripts",
     "start": "npm-run-all -p watch-css start-ts",
-    "build": "npm run build-css && react-app-rewired build --scripts-version react-scripts-ts",
+    "build": "npm run build-css && react-app-rewired build --scripts-version react-scripts",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer build/static/js/main.*",
@@ -60,16 +63,21 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
     "@types/stylus": "^0.48.32",
+    "babel-plugin-import": "^1.13.0",
+    "css-loader": "^3.4.1",
+    "customize-cra": "^0.9.1",
     "fork-ts-checker-webpack-plugin": "^3.1.1",
     "husky": "^3.1.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
-    "react-app-rewire-less": "^2.1.3",
-    "react-app-rewired": "1.6.2",
-    "react-scripts-ts": "^3.1.0",
+    "react-app-rewired": "^2.1.5",
+    "react-scripts": "^3.3.0",
     "redux-devtools-extension": "^2.13.7",
     "source-map-explorer": "^2.2.1",
+    "style-loader": "^1.1.2",
     "stylus": "^0.54.5",
     "stylus-chokidar": "^0.0.3",
     "ts-import-plugin": "^1.6.2",
@@ -78,5 +86,17 @@
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^4.1.0",
     "typescript": "^3.7.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
