--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -26,9 +26,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "url-pattern": "^1.0.3"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "build-ts": "react-scripts build",
