--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.10.2",
+    "@reach/router": "^1.2.1",
     "@types/jest": "^24.0.25",
     "@types/react": "^16.9.17",
     "@types/react-router": "^5.1.4",
@@ -56,6 +57,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^13.1.6",
+    "@types/reach__router": "^1.2.6",
     "@types/react-document-title": "^2.0.2",
     "@types/react-dom": "^16.9.4",
     "@types/react-redux": "^7.1.5",
