[mypy] Ignore missing imports from pdpydras

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -78,3 +78,6 @@ ignore_missing_imports = True
 
 [mypy-simple_salesforce.*]
 ignore_missing_imports = True
+
+[mypy-pdpyras.*]
+ignore_missing_imports = True
