Adds whitesource runner to CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,7 @@ jobs:
             MYPYPATH="`pwd`/webui/backend/" \
               mypy --config-file mypy.ini ./runners ./scripts ./webui/backend/webui ./connectors
             pytest -vv
+            ./scripts/run-whitesource
 
       # - run:
       #     name: do the build
