--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
             pip install --upgrade pip
             pip uninstall -y typing
             pip install . && touch .venv/lib/python3.7/site-packages/snowflake/__init__.py
+            pip uninstall -y typing
 
       - save_cache:
           paths:
