--- a/src/wss-agent.config
+++ b/src/wss-agent.config
@@ -67,7 +67,7 @@ resolveAllDependencies=false
 python.resolveDependencies=true
 python.ignoreSourceFiles=false
 python.ignorePipInstallErrors=true
-python.installVirtualenv=false # set this parameter to true if using virtualenv to build the project
+python.installVirtualenv=true
 python.resolveHierarchyTree=false
 python.resolveSetupPyFiles=true
 python.runPipenvPreStep=false
