[wss] Update version string

--- a/src/wss-agent.config
+++ b/src/wss-agent.config
@@ -1,4 +1,4 @@
-###############################################################
+A###############################################################
 # WhiteSource Unified-Agent configuration file
 ###############################################################
 # PYTHON SCAN MODE: setup.py
@@ -10,12 +10,12 @@
 #requesterEmail=user@provider.com
 
 projectName=SnowAlert
-projectVersion=1.0
+projectVersion=
 # projectToken=
 #projectTag= key:value
 
 productName=SnowAlert
-productVersion=1.0
+productVersion=
 # productToken=
 
 #projectPerFolder=true
