--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -81,3 +81,6 @@ ignore_missing_imports = True
 
 [mypy-pdpyras.*]
 ignore_missing_imports = True
+
+[mypy-msrestazure.*]
+ignore_missing_imports = True
