--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -15,7 +15,7 @@
     "connected-react-router": "^6.8.0",
     "enquire.js": "^2.1.6",
     "history": "^4.7.2",
-    "jwt-decode": "^2.2.0",
+    "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.20",
     "lodash-decorators": "^6.0.0",
     "moment": "^2.29.0",
@@ -84,7 +84,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^4.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.0.3"
   },
   "browserslist": {
     "production": [
