--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -4,28 +4,28 @@
   "main": "lib/index.js",
   "private": true,
   "dependencies": {
-    "@antv/data-set": "^0.11.1",
+    "@antv/data-set": "^0.11.6",
     "@reach/router": "^1.3.3",
-    "@types/jest": "^26.0.7",
-    "@types/react": "^16.9.25",
+    "@types/jest": "^26.0.14",
+    "@types/react": "^16.9.49",
     "@types/react-router": "^5.1.4",
-    "antd": "^4.0.3",
-    "axios": "^0.19.2",
+    "antd": "^4.6.5",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "enquire.js": "^2.1.6",
-    "history": "^4.7.2",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.13",
+    "history": "^5.0.0",
+    "jwt-decode": "^3.0.0-beta.2",
+    "lodash": "^4.17.20",
     "lodash-decorators": "^6.0.0",
-    "moment": "^2.23.0",
+    "moment": "^2.29.0",
     "path-to-regexp": "^6.1.0",
-    "rc-drawer": "^3.1.3",
+    "rc-drawer": "^4.1.0",
     "react": "^16.13.1",
     "react-document-title": "^2.0.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
+    "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
@@ -53,38 +53,38 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/enquire.js": "^2.1.1",
-    "@types/history": "^4.7.5",
+    "@types/history": "^4.7.8",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^14.0.27",
+    "@types/lodash": "^4.14.161",
+    "@types/node": "^14.11.2",
     "@types/reach__router": "^1.3.1",
     "@types/react-document-title": "^2.0.4",
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/stylus": "^0.48.32",
     "babel-plugin-import": "^1.13.0",
-    "css-loader": "^3.4.2",
-    "customize-cra": "^0.9.1",
-    "fork-ts-checker-webpack-plugin": "^4.1.1",
-    "husky": "^4.2.3",
+    "css-loader": "^4.3.0",
+    "customize-cra": "^1.0.0",
+    "fork-ts-checker-webpack-plugin": "^5.2.0",
+    "husky": "^4.3.0",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "lint-staged": "^10.0.8",
+    "less-loader": "^7.0.1",
+    "lint-staged": "^10.4.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.1",
+    "prettier": "^2.1.2",
     "react-app-rewired": "^2.1.5",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "redux-devtools-extension": "^2.13.7",
-    "source-map-explorer": "^2.4.1",
+    "source-map-explorer": "^2.5.0",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.5",
     "stylus-chokidar": "^0.0.3",
     "ts-import-plugin": "^1.6.5",
-    "ts-loader": "^6.2.2",
-    "tslint": "^6.1.0",
+    "ts-loader": "^8.0.4",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.13.0",
-    "tslint-react": "^4.2.0",
-    "typescript": "^3.8.3"
+    "tslint-react": "^5.0.0",
+    "typescript": "^4.0.3"
   },
   "browserslist": {
     "production": [
