--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -84,3 +84,6 @@ ignore_missing_imports = True
 
 [mypy-duo_client.*]
 ignore_missing_imports = True
+
+[mypy-sentry-sdk.*]
+ignore_missing_imports = True
