--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -85,5 +85,5 @@ ignore_missing_imports = True
 [mypy-duo_client.*]
 ignore_missing_imports = True
 
-[mypy-sentry-sdk.*]
+[mypy-sentry_sdk.*]
 ignore_missing_imports = True
