--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
             source .venv/bin/activate
             pip install --upgrade pip
             pip uninstall -y typing
-            pip install . && touch .venv/lib/python3.7/site-packages/snowflake/__init__.py
+            pip install .
             pip uninstall -y typing
 
       - save_cache:
