--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,7 @@ jobs:
 
       - restore_cache:
           keys:
-          - app-venv-{{ checksum "src/setup.py" }}
-          - app-venv-  # fallback to using the latest cache if no exact match is found
+          - app-venv-{{ checksum "src/setup.py" }}-0
 
       - run:
           name: install_dependencies
@@ -22,12 +21,12 @@ jobs:
             cd src
             python -m venv .venv
             .venv/bin/pip install --upgrade pip
-            .venv/bin/pip install .
+            .venv/bin/pip install . pytest
 
       - save_cache:
           paths:
             - ./src/.venv
-          key: app-venv-{{ checksum "src/setup.py" }}
+          key: app-venv-{{ checksum "src/setup.py" }}-0
 
       - run:
           name: run static analysis
