--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.49",
     "@types/react-router": "^5.1.4",
+    "@types/sql-formatter": "^2.3.0",
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
@@ -27,7 +28,8 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sql-formatter": "^2.3.3"
   },
   "scripts": {
     "build-ts": "react-scripts build",
@@ -56,7 +58,7 @@
     "@types/history": "^4.7.8",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.161",
-    "@types/node": "^14.11.2",
+    "@types/node": "^14.14.6",
     "@types/reach__router": "^1.3.1",
     "@types/react-document-title": "^2.0.4",
     "@types/react-dom": "^16.9.5",
