--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -41,7 +41,7 @@
     "eject": "react-scripts eject",
     "analyze": "source-map-explorer build/static/js/main.*",
     "precommit": "lint-staged",
-    "lint-all": "prettier --write --no-bracket-spacing --single-quote --trailing-comma=all --print-width=120 src/*.{ts,tsx}",
+    "lint-all": "prettier --write --no-bracket-spacing --single-quote --trailing-comma=all --print-width=120 src/**/*.{ts,tsx}",
     "tslint-check": "tslint-config-prettier-check ./tslint.json"
   },
   "lint-staged": {
