--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -9,7 +9,6 @@
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.49",
     "@types/react-router": "^5.1.4",
-    "@types/sql-formatter": "^2.3.0",
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
@@ -29,7 +28,7 @@
     "react-router": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "sql-formatter": "^2.3.3"
+    "snowsql-formatter": "1.1.0"
   },
   "scripts": {
     "build-ts": "react-scripts build",
