--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -86,4 +86,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-sentry_sdk.*]
+
+ignore_missing_imports = True
+[mypy-pymsteams.*]
 ignore_missing_imports = True
