--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -5,6 +5,24 @@
   "private": true,
   "dependencies": {
     "@antv/data-set": "^0.11.6",
+    "@codemirror/autocomplete": "^0.18.3",
+    "@codemirror/basic-setup": "^0.18.0",
+    "@codemirror/closebrackets": "^0.18.0",
+    "@codemirror/commands": "^0.18.0",
+    "@codemirror/comment": "^0.18.0",
+    "@codemirror/fold": "^0.18.0",
+    "@codemirror/gutter": "^0.18.0",
+    "@codemirror/highlight": "^0.18.3",
+    "@codemirror/history": "^0.18.1",
+    "@codemirror/lang-sql": "^0.18.0",
+    "@codemirror/language": "^0.18.0",
+    "@codemirror/lint": "^0.18.1",
+    "@codemirror/matchbrackets": "^0.18.0",
+    "@codemirror/rectangular-selection": "^0.18.0",
+    "@codemirror/search": "^0.18.2",
+    "@codemirror/state": "^0.18.3",
+    "@codemirror/theme-one-dark": "^0.18.0",
+    "@codemirror/view": "^0.18.3",
     "@reach/router": "^1.3.3",
     "@types/jest": "^26.0.14",
     "@types/react": "^16.9.49",
