--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "snowsql-formatter": "1.1.0"
@@ -94,7 +95,7 @@
     "prettier": "^2.1.2",
     "react-app-rewired": "^2.1.5",
     "react-scripts": "^3.4.3",
-    "redux-devtools-extension": "^2.13.7",
+    "redux-devtools-extension": "^2.13.9",
     "source-map-explorer": "^2.5.0",
     "style-loader": "^1.1.3",
     "stylus": "^0.54.5",
