--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,12 @@ jobs:
           name: run static analysis
           command: |
             cd src
-            # -- error: Source file found twice under different module names:
-            # -- 'src.runners.helpers' and 'runners.helpers'
-            # MYPYPATH="`pwd`/webui/backend/" \
-            #   .venv/bin/mypy --config-file mypy.ini \
-            #      ./runners \
-            #      ./scripts \
-            #      ./webui/backend/webui \
-            #      ./connectors
+            MYPYPATH="`pwd`/webui/backend/" \
+              .venv/bin/mypy --config-file mypy.ini \
+                 ./runners \
+                 ./scripts \
+                 ./webui/backend/webui \
+                 ./connectors
             .venv/bin/pytest -vv
             ./scripts/run-whitesource
 
