--- a/src/webui/frontend/package.json
+++ b/src/webui/frontend/package.json
@@ -31,12 +31,16 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
+    "elliptic": "6.5.4",
     "enquire.js": "^2.1.6",
     "history": "^5.0.0",
+    "ini": "1.3.6",
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.20",
     "lodash-decorators": "^6.0.0",
+    "merge-deep": "3.0.3",
     "moment": "^2.29.0",
+    "object-path": "0.11.5",
     "path-to-regexp": "^6.1.0",
     "rc-drawer": "^4.1.0",
     "react": "^16.13.1",
