made changes according to review

--- a/infra/terraform/external_function/snowalert/.gitignore
+++ b/infra/terraform/external_function/snowalert/.gitignore
@@ -1,1 +1,11 @@
 lambda-code.zip
+lambda-code/site-packages/
+
+# Compiled files
+*.tfstate
+*.tfstate.backup
+.terraform.tfstate.lock.info
+*.plan
+
+# Module directory
+.terraform/
