[dc] Change AWSIC to 6 retries

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -87,3 +87,6 @@ ignore_missing_imports = True
 
 [mypy-pymsteams.*]
 ignore_missing_imports = True
+
+[mypy-aiobotocore.*]
+ignore_missing_imports = True
