--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
                  ./runners \
                  ./scripts \
                  ./webui/backend/webui \
-                 ./connectors
+                 ./connectors \
+                 ./../infra/terraform/external_function/snowalert/lambda-code
             .venv/bin/pytest -vv
             ./scripts/run-whitesource
 
