add demjson upgrade

--- a/src/mypy.ini
+++ b/src/mypy.ini
@@ -16,7 +16,7 @@ ignore_missing_imports = True
 [mypy-cryptography.*]
 ignore_missing_imports = True
 
-[mypy-demjson.*]
+[mypy-demjson3.*]
 ignore_missing_imports = True
 
 [mypy-snowflake.*]
