Revert "Add 5m sleep to Docker file"
This reverts commit b84705b247a0c4e57ada9d6f65081f15cb2c35b0.

--- a/Dockerfile.snowalert
+++ b/Dockerfile.snowalert
@@ -19,4 +19,4 @@ COPY ./install ./install
 RUN PYTHONPATH='' pip install ./snowalert/src/
 RUN PYTHONPATH='' pip install requests
 
-CMD ./run all && sleep 300
+CMD ./run all
